packages/yew-functional-macro/tests/function_attr/generic-props-fail.stderr
error[E0599]: no method named `build` found for struct `PropsBuilder<PropsBuilderStep_missing_required_prop_a>` in the current scope
  --> $DIR/generic-props-fail.rs:18:14
   |
4  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `build` not found for this
...
18 |     html! { <Comp<Props> /> }; // missing prop 'a'
   |              ^^^^ method not found in `PropsBuilder<PropsBuilderStep_missing_required_prop_a>`
